--- a/.github/workflows/portfolio.yml
+++ b/.github/workflows/portfolio.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - run: npm audit
       - run: npm ci
       - run: npm run export
       - uses: jakejarvis/s3-sync-action@master
