--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "homepage": "https://github.com/afjlambert/lambert2#readme",
   "devDependencies": {
     "lerna": "^3.22.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-sharp": "^4.2.2"
   }
 }
