--- a/.github/workflows/portfolio.yml
+++ b/.github/workflows/portfolio.yml
@@ -32,5 +32,5 @@ jobs:
           AWS_S3_BUCKET: digitaalcv.nl
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: eu-central-1
+          AWS_REGION: ${{ secrets.AWS_REGION }}
           SOURCE_DIR: apps/portfolio/__sapper__/export
