--- a/.github/workflows/imgproxy.yml
+++ b/.github/workflows/imgproxy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - run: zip lambda.zip apps/imgproxy
+      - run: zip lambda.zip apps/imgproxy/*
       - uses: stcalica/update-lambda@0.0.2
         with:
           package: lambda.zip
