Conditionally call github actions based on 'paths'

--- a/.github/workflows/portfolio.yml
+++ b/.github/workflows/portfolio.yml
@@ -1,9 +1,11 @@
-name: Portfolio
+name: portfolio
 
 on:
   push:
     branches:
       - master
+    paths:
+      - apps/portfolio
 
 defaults:
   run:
