--- a/.github/workflows/imgproxy.yml
+++ b/.github/workflows/imgproxy.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - master
     paths:
-      - .github/workflows/imgproxy
-      - apps/imgproxy
+      - .github/workflows/imgproxy.yml
+      - apps/imgproxy/**
 
 defaults:
   run:
