make sure we have node_modules folder too

--- a/.github/workflows/imgproxy.yml
+++ b/.github/workflows/imgproxy.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - run: npm ci
       - run: zip lambda.zip *
       - uses: stcalica/update-lambda@0.0.2
         with:
