--- a/.github/workflows/imgproxy.yml
+++ b/.github/workflows/imgproxy.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - run: npm ci
-      - run: zip lambda.zip *
+      - run: zip -r lambda.zip .
       - uses: stcalica/update-lambda@0.0.2
         with:
           package: apps/imgproxy/lambda.zip
