--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -2,6 +2,8 @@
   "name": "TODO",
   "description": "TODO",
   "version": "0.0.1",
+  "repository": "https://github.com/afjlambert/lambert2",
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
@@ -17,9 +19,6 @@
     "sirv": "^0.4.2"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "sapper": "^0.27.0",
-    "svelte": "^3.0.0",
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
@@ -29,8 +28,11 @@
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
-    "rollup": "^2.3.4",
+    "npm-run-all": "^4.1.5",
+    "rollup": "^2.33.1",
     "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^5.3.0"
+    "rollup-plugin-terser": "^7.0.2",
+    "sapper": "^0.27.0",
+    "svelte": "^3.0.0"
   }
 }
