--- a/.github/workflows/portfolio.yml
+++ b/.github/workflows/portfolio.yml
@@ -27,7 +27,7 @@ jobs:
 
       - run: npm audit
       - run: npm ci
-      - run: npm run export
+      - run: NODE_ENV=production npm run export
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
