--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -11,7 +11,14 @@
     "start": "node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "test": "run-p --race dev cy:run",
+    "watch:tailwind": "postcss static/tailwind.css -o static/index.css -w",
+    "build:tailwind": "NODE_ENV=production postcss static/tailwind.css -o static/index.css",
+    "_dev": "run-p start:dev autobuild watch:tailwind",
+    "_build": "npm run build:tailwind && rollup -c",
+    "_start": "sirv public --single",
+    "_start:dev": "sirv public --single --dev",
+    "_autobuild": "rollup -c -w"
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -29,10 +36,12 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
     "npm-run-all": "^4.1.5",
+    "postcss-cli": "^8.2.0",
     "rollup": "^2.33.1",
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^7.0.2",
-    "sapper": "^0.27.0",
-    "svelte": "^3.0.0"
+    "sapper": "^0.27.16",
+    "svelte": "^3.0.1",
+    "tailwindcss": "^1.9.6"
   }
 }
